--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -9,7 +9,7 @@
 <body>
     <nav>
      <div class="logo">
-       <h5>LOGO</h5>
+       <h5>Gallery</h5>
          
      </div>
      <ul class="navLink">
@@ -34,27 +34,27 @@
  
      
      
- <div class="box">
+ <!-- <div class="box">
                <a href="ttps://oriontralelblog.com/wp-content/uploads/2019/08/IMG_6310.jpg" >
                <img src="https://oriontravelblog.com/wp-content/uploads/2019/08/IMG_6310.jpg" alt="image"></a>
            <div class="caption">Lorem ipsum </div>
- </div> 
-     
+ </div>  -->
+ 
+  <% posts.forEach(function(post){ %>
+    <div class="box">
+        <img src="/images/uploads/<%= post.image %>" alt="<%= post.title %>" class="src">
+        <div class="caption" style="display: flex;">
+            <div class="caption" style="color: aquamarine; margin-right: 5px;">@<%= post.user.username %></div>
+            <div class="caption" style="text-align: center;"><%= post.imageText %>  </div>
+        </div>
+       
+    </div>
+
+  <% }) %>
 
    
      
-<div class="box">
-               <a href="https://sciencecalx.com/wp-content/uploads/2023/07/chemistry.png" >
-               <img src="https://orionstardesign.com/wp-content/uploads/2021/08/newStopCropped1.jpg" alt="image"></a>
-           <div class="caption">Lorem ipsum </div>
- </div> 
-     
-<div class="box">
-               <a href="https://orionstardesign.com/wp-content/uploads/2023/08/003.jpg" >
-               <img src="https://orionstardesign.com/wp-content/uploads/2023/08/003.jpg" alt="image"></a>
-           <div class="caption">Lorem ipsum </div>
- </div> 
-     
+ <!--    
 <div class="box">
                <a href="https://orionstardesign.com/wp-content/uploads/2023/08/002.jpg" >
                <img src="https://orionstardesign.com/wp-content/uploads/2023/08/002.jpg" alt="image"></a>
@@ -200,7 +200,7 @@
                <a href="https://orionstardesign.com/wp-content/uploads/2023/08/029.jpg" >
                <img src="https://orionstardesign.com/wp-content/uploads/2023/08/029.jpg" alt="image"></a>
            <div class="caption">Lorem ipsum </div>
- </div>
+ </div> -->
 
 </div>
    
