--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -73,7 +73,7 @@
       <div class="col-md-4" id="avatar-wrapper">
         <img id="avatar" src="https://images.unsplash.com/photo-1483909796554-bb0051ab60ad?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Z2lybCUyMHByb2ZpbGV8ZW58MHx8MHx8fDA%3D" alt="avatar" class="img-fluid rounded">
         <span id="edit-icon" class="fas fa-pencil-alt" onclick="showAvatarForm()"></span>
-        <form id="upload-avatar-form" action="/upload-avatar" method="post" enctype="multipart/form-data" class="mt-3">
+        <form id="upload-avatar-form" action="/profile" method="post" enctype="multipart/form-data" class="mt-3">
           <input type="file" name="avatar" class="form-control form-control-sm mb-2">
           <button type="submit" class="btn btn-success btn-sm">Upload</button>
         </form>
@@ -108,7 +108,7 @@
           <form id="uploadpost" action="/upload" method="post" enctype="multipart/form-data" class="mt-3">
             <input type="text" name="imageText" placeholder="Add caption" class="form-control form-control-sm mb-2">
             <input type="file" name="file" class="form-control form-control-sm mb-2">
-            <button type="submit" class="btn btn-success btn-sm">Upload</button>
+            <button type="submit" class="btn btn-success btn-sm">Upload</button> 
           </form>
           <a href="/logout" class="btn btn-danger btn-sm mt-3" id="Logoutbtn">Log Out</a>
         </div>
