--- a/views/usersprofile.ejs
+++ b/views/usersprofile.ejs
@@ -60,6 +60,8 @@
 </head>
 <body>
   <!-- Main content -->
+  <button type="button" class="btn btn-primary" onclick="window.location.href='/'">Home</button>
+  
   <div class="container mt-4">
     <div class="row">
       <div class="col-md-4" id="avatar-wrapper">
