Fixed Routing issues in feed

--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../stylesheets/feed.css">
+    <!-- <link rel="stylesheet" href="./stylesheets/style.css"> -->
+    <link rel="stylesheet" href="./stylesheets/popup.css">
 </head>
 <body>
     <nav>
@@ -47,6 +49,7 @@
 
  
 <div class="container">   
+
   <% posts.forEach(function(post){ %>
     <div class="box">
         <img src="/images/uploads/<%= post.image %>" alt="<%= post.title %>" class="src">
